# pybotters-data-collect

./: README.md  pyproject.toml  setup.py
pybotters_data_collect/: __init__.py  handler.py
sample/: collect_trades.py
